k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: country-info-service
  namespace: country-info
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
spec:
  ingressClassName: nginx
  rules:
    - host: country-info.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: country-info-service
                port: { number: 80 }
